--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 # Site settings
-title: Solo, a Jekyll Theme
-tag_text: Solo
-description: Solo is a Jekyll theme that supports single-page websites only, but supports them well. Yes, it’s responsive.
+title: jgeboski's Software Packages
+url: https://jgeboski.github.io
 
 # Build settings
 markdown: kramdown
-
 exclude: ["README.md"]
